--- a/main/main.html
+++ b/main/main.html
@@ -61,7 +61,7 @@
                   <i class="ri-close-large-line"></i>
                </div>
 
-               <!-- <div class="nav__social">
+               <div class="nav__social">
                   <a href="https://www.instagram.com/" target="_blank" class="nav__social-link">
                      <i class="ri-instagram-line"></i>
                   </a>
@@ -77,7 +77,7 @@
                   <a href="https://www.linkedin.com/" target="_blank" class="nav__social-link">
                      <i class="ri-linkedin-box-line"></i>
                   </a>
-               </div> -->
+               </div>
             </div>
 
             <!-- Toggle button -->
